main/default/objects/Account/fields/INPT_GOV_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>INPT_GOV_Entity_ID__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Government Entity ID that identifies the federal or state &amp; local government that a Salesforce account is mapped to.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Government Entity ID that identifies the federal or state &amp; local government that a Salesforce account is mapped to.</inlineHelpText>
    <label>IQ Government Entity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>