main/default/objects/Account/fields/INPT_Government_Entity__c.field-meta.xml
<CustomField>
    <fullName>INPT_Government_Entity__c</fullName>
    <label>IQ Government Entity</label>
    <type>TextArea</type>
</CustomField>